Archive2/7e/4f96c69077b6c1/output
main.cpp:1:3: error: invalid preprocessing directive #Include
 # Include 
   ^
main.cpp:8:31: warning: unknown escape sequence: '\040' [enabled by default]
     std :: cout  << myint <<  ' \ n ' ; 
                               ^
main.cpp:8:31: warning: multi-character character constant [-Wmultichar]
main.cpp: In function 'int principal()':
main.cpp:6:5: error: 'corda' is not a member of 'std'
     std :: corda teste =  "45" ; 
     ^
main.cpp:6:18: error: expected ';' before 'teste'
     std :: corda teste =  "45" ; 
                  ^
main.cpp:7:31: error: 'teste' was not declared in this scope
     int myint = std :: stoi ( teste ) ; 
                               ^
main.cpp:8:5: error: 'cout' is not a member of 'std'
     std :: cout  << myint <<  ' \ n ' ; 
     ^
main.cpp:9:1: warning: no return statement in function returning non-void [-Wreturn-type]
 }
 ^
