Archive2/7e/4f96c69077b6c1/main.cpp
# Include 
# include <string>
 
int principal ( ) 
{ 
    std :: corda teste =  "45" ; 
    int myint = std :: stoi ( teste ) ; 
    std :: cout  << myint <<  ' \ n ' ; 
}